Fix alignment of the loading spinner text

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -197,14 +197,13 @@
 	.components-button {
 	  margin-left: 5px;
 	}
+	.imajinn-spinner {
+	  width: 100px;
+	  height: 100px;
+	  display: block;
+	  margin: 0 auto;
+	}
   }
-
-  .imajinn-spinner {
-	width: 100px;
-	height: 100px;
-	display: block;
-  }
-
 }
 
 .prompt-history {
